--- a/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/frm_main.resx
+++ b/Serial_LEDStrip_Communication/Serial_LEDStrip_Communication/frm_main.resx
@@ -649,4 +649,7 @@
   <metadata name="wait_endOfBoot.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>285, 17</value>
   </metadata>
+  <metadata name="colorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>477, 17</value>
+  </metadata>
 </root>
